added images abd html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,212 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kids-School-Assignment-2</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
 </head>
-<body>
-    <h3>Kids School</h3>
+
+<body class="quicksand-font">
+    <header>
+
+        <section class="nav">
+
+            <div class="nav-container ">
+                <nav class="navbar display-flex max-width">
+                    <div class="logo-part">
+                        <img src="assets/logo.png" alt="">
+                        <h2 class="school-title">SCHOOL</h2>
+                    </div>
+
+                    <div class="item">
+                        <ul class="nav-links display-flex">
+                            <li class="nav-item"><a href="" class="nav-link-1">Home</a></li>
+                            <li class="nav-item"><a href="" class="nav-link-2">About</a></li>
+                            <li class="nav-item"><a href="" class="nav-link-3">Facilities</a></li>
+                            <li class="nav-item"><a href="" class="nav-link-4">Admission</a></li>
+                        </ul>
+                    </div>
+                    <div class="button">
+                        <button class="button-part">Contact</button>
+                    </div>
+                    <div class="menu-icon display-none">
+                        <i class="fa-solid fa-bars"></i>
+                    </div>
+                </nav>
+                <hr class="nais">
+            </div>
+
+        </section>
+    </header>
+    <main>
+        <section class="details ">
+            <div class="details-container display-flex max-width">
+                <div class="title-1">
+                    <h1 class="heading"><span class="part-1">Empowering</span> <br>
+                        students from small age<span class="part-2"> towards vision</span></h1>
+                    <p class="heading-explanation">With the courage, Confidence, Creativity and Compassion to make their
+                        Unique Contribution in a Diverse and Dynamic World.</p>
+                    <button class="btn-primary">Enroll Now</button>
+
+                </div>
+                <div class="image">
+                    <img src="assets/hero-kids.png" alt="">
+                </div>
+            </div>
+
+
+        </section>
+        <section class="curriculum">
+            <div class="curriculum-container max-width">
+                <div class="headline">
+                    <h2 class="headline-title">Standard Curriculum</h2>
+                </div>
+                <div class="all-box display-flex">
+                    <div class="box-1">
+                        <img src="assets/kinder.png" alt="">
+                        <h3 class="image-title">Kinder (3-6) Years</h3>
+                        <p class="box-1description">Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient</p>
+                        <h4 class="btn-1">Read More</h4>
+
+                    </div>
+                    <div class="box-2">
+                        <img src="assets/elementary.png" alt="">
+                        <h3 class="image-title">Elementary School</h3>
+                        <p class="box-1description">Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient</p>
+                        <h4 class="btn-2">Read More</h4>
+
+                    </div>
+                    <div class="box-3">
+                        <img src="assets/middle.png" alt="">
+                        <h3 class="image-title">Middle (10-16) Years</h3>
+                        <p class="box-1description">Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient</p>
+                        <h4 class="btn-3">Read More</h4>
+
+                    </div>
+                </div>
+                <div class="icon-2 display-flex">
+                    <div class="icon-left">
+
+
+                        <i class="fa-solid fa-angle-left"></i>
+                    </div>
+                    <div class="icon-right">
+                        <i class="fa-solid fa-angle-right"></i>
+                    </div>
+
+                </div>
+
+
+
+
+
+        </section>
+
+        <section class="our-stories">
+            <div class="our-stories-container max-width">
+                <div class="frontline">
+                    <h1 class="title-font">Our Stories</h1>
+                </div>
+
+                <!-- <div class="story-container max-width"> -->
+
+                <div class="story-container">
+                    <div class="main-image">
+                        <div class="photo">
+                            <img src="assets/story-1.png" alt="">
+                            <span class="hard">November 19, 2019</span>
+                            <h3 class="story1-title">A fun toddler coloring training on
+                                classroom</h3>
+                            <p class="story-explain">Beautiful branding for changes by Never Now in Australia.
+                                changes is a platform for open discussion in an inclusive and
+                                collaborative environment, providing the...</p>
+                        </div>
+
+
+                    </div>
+                    <div class="image-container">
+                        <div class="photo-1">
+                            <img src="assets/story-2.png" alt="">
+                            <span class="hard-1">November 19, 2019</span>
+                            <h4 class="photo-head">Find out if a school fits the
+                                family’s needs</h4>
+                        </div>
+                        <div class="photo-2">
+                            <img src="assets/story-3.png" alt="">
+                            <span class="hard-2">November 19, 2019</span>
+                            <h4 class="photo-head">Summer math & literacy
+                                centres for kids</h4>
+                        </div>
+                        <div class="photo-3">
+                            <img src="assets/story-4.png" alt="">
+                            <span class="hard-3">September 10, 2019</span>
+                            <h4 class="photo-head">Classroom management
+                                techniques for new tutors</h4>
+                        </div>
+                        <div class="photo-4">
+                            <img src="assets/story-5.png" alt="">
+                            <span class="hard-4">July 19, 2019</span>
+                            <h4 class="photo-head">Conversation rhymes
+                                improve kids listening</h4>
+                        </div>
+
+
+                        <!-- <button class="btn-class">View All</button> -->
+
+
+                    </div>
+
+                </div>
+                <div class="button">
+                    <button class="btn-class">View All</button>
+
+                </div>
+            </div>
+        </section>
+
+
+    </main>
+    <footer>
+
+        <div class="footer max-width">
+            <div class="footer-container">
+                <div class="logo-2 display-flex">
+                    <img src="assets/logo.png" alt="Logo">
+                    <h2 class="logo-title">Kids<br>Education</h2>
+                </div>
+                <div class="logo-para">
+                    <p class="scl-explain">
+                        Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca
+                        pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.
+                    </p>
+                </div>
+            </div>
+
+            <div class="about-part">
+                <h3>About School</h3>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Facilities</a></li>
+                    <li><a href="">Admission</a></li>
+                </ul>
+            </div>
+
+            <div class="social-media">
+                <h3>Keep In Touch</h3>
+                <a href=""><img src="assets/fb.png" alt=""></a>
+                <a href=""><img src="assets/dribble.png" alt=""></a>
+                <a href=""><img src="assets/twitter.png" alt=""></a>
+                <a href=""><img src="assets/google+.png" alt=""></a>
+            </div>
+        </div>
+    </footer>
+            
 </body>
+
 </html>
